testdata/baselines/reference/submodule/compiler/contextuallyTypedJsxAttribute2.errors.txt
contextuallyTypedJsxAttribute2.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.
contextuallyTypedJsxAttribute2.tsx(4,52): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== contextuallyTypedJsxAttribute2.tsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from "react";
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import { ComponentPropsWithRef, ElementType } from "react";
                                                       ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    function UnwrappedLink<T extends ElementType = ElementType>(
      props: Omit<ComponentPropsWithRef<ElementType extends T ? "a" : T>, "as">,
    ) {
      return <a></a>;
    }
    
    <UnwrappedLink onClick={(e) => {}} />;
    
    function UnwrappedLink2<T extends ElementType = ElementType>(
      props: Omit<ComponentPropsWithRef<ElementType extends T ? "a" : T>, "as"> & {
        as?: T;
      },
    ) {
      return <a></a>;
    }
    
    <UnwrappedLink2 onClick={(e) => {}} />;
    <UnwrappedLink2 as="button" onClick={(e) => {}} />;
    